# simdcsv

./: .gitignore  .lcovrc  .roborev.toml  .work-review-status  .work.toml  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  PRODUCTION_READINESS_PLAN.md  README.md  codecov.yml
.cache/clangd/index/: arrow_buffer.h.A1B03B87E27A0076.idx  arrow_buffer.h.D0D200AE61BDBD91.idx  arrow_buffer.h.F44C405A6F4DE4E7.idx  arrow_c_data.h.8255D3F59A150EB6.idx  arrow_c_data.h.85AEB6C840263326.idx  arrow_c_data.h.EE5DF0E91CE2A071.idx  arrow_column_builder.h.2E65E6A8F91A2E31.idx  arrow_column_builder.h.AFD47972025AA825.idx  arrow_column_builder.h.E7D7A268069F9C3C.idx  arrow_conversion_test.cpp.02E30602973638DF.idx  (+347 more)
.claude/: settings.json
.github/workflows/: README.md  benchmark.yml  benchmarks.yml  ci.yml  claude-code-review.yml  docs.yml  fuzz.yml  python-wheels.yml  python.yml  sanitizers.yml
benchmark/: README.md  arrow_convert_benchmarks.cpp  basic_benchmarks.cpp  benchmark_main.cpp  check_regression.py  cli_comparison.sh  comparison_benchmarks.cpp  dimensions_benchmarks.cpp  end_to_end_benchmarks.cpp  energy_benchmarks.cpp  error_handling_benchmarks.cpp  external_parser_benchmarks.cpp  hypothesis_benchmarks.cpp  number_parsing_benchmarks.cpp  parser_overhead_benchmarks.cpp  performance_metrics.cpp  real_world_benchmarks.cpp  report_generator.py  run_benchmarks.sh  simd_benchmarks.cpp  table_benchmarks.cpp  transpose_benchmarks.cpp
cmake/: ArrowIntegration.cmake
cuda/: CMakeLists.txt  csv_gpu.cu  csv_gpu.cuh  gpu_benchmark.cpp  gpu_parser.cpp  gpu_parser_test.cpp
docs/: Doxyfile  _quarto.yml  architecture.qmd  benchmarks.qmd  build.sh  caching.qmd  cli.qmd  coverage.md  doxygen-header.html  error-handling.qmd  error_handling.md  getting-started.qmd  index.qmd  integration-guide.qmd  literature_review.md  mainpage.md  recent_simd_research_2020_2026.md  streaming.qmd
docs/plans/: 2026-02-02-port-disabled-tests.md  2026-02-04-gpu-acceleration-prototype.md  2026-02-04-gpu-benchmark-results.md  2026-02-11-backslash-escape-mode.md  2026-02-11-r-compatible-parsing-defaults.md  2026-02-11-type-coercion-error-reporting.md
fuzz/: README.md  fuzz_csv_parser.cpp  fuzz_dialect_detection.cpp  fuzz_parse_auto.cpp
include/: arrow_output.h  branchless_state_machine.h  column_index.h  common_defs.h  csv_parser.h  debug.h  debug_parser.h  dialect.h  encoding.h  error.h  extraction_config.h  gpu_parser.h  index_cache.h  io_util.h  libvroom.h  libvroom_c.h  libvroom_types.h  mem_util.h  mmap_util.h  simd.h  simd_highway.h  simd_number_parsing.h  simdcsv.h  simdcsv_c.h  streaming.h  two_pass.h  type_detector.h  utf8.h  value_extraction.h
include/libvroom/: arrow_c_data.h  arrow_column_builder.h  arrow_export.h  comment_util.h  convert.h  dialect.h  error.h  escape_mask.h  fast_arrow_context.h  fast_column_context.h  format_parser.h  gpu_parser.h  options.h  parse_utils.h  parsed_chunk_queue.h  simd_info.h  split_fields.h  streaming.h  table.h  types.h  vroom.h
include/vroom/: arrow_buffer.h  arrow_c_data.h  arrow_column_builder.h  arrow_export.h  arrow_ipc_writer.h  data_chunk.h  dictionary.h  fast_arrow_context.h  fast_column_context.h  options.h  quote_parity.h  simd_atoi.h  split_fields.h  statistics.h  types.h  vroom.h
logs/: job-logs.txt
logs/logs_53369644093/: 0_ubuntu-latest - Debug.txt  1_ubuntu-latest - Release.txt  2_macos-latest - Release.txt  3_Code Quality Checks.txt  4_Code Coverage.txt  5_macos-latest - Debug.txt
oss-fuzz/: Dockerfile  build.sh  project.yaml
python/: CMakeLists.txt  README.md  pyproject.toml
python/examples/: README.md
python/src/: bindings.cpp
python/src/vroom_csv/: __init__.py  _core.pyi
python/tests/: test_arrow.py  test_basic.py  test_batched.py  test_full_api.py  test_multi_chunk.py  test_streaming.py  test_stub_api.py  test_type_inference.py
scripts/: analyze_hypotheses.py  generate_test_data.py  pre-commit  spawn-issue.sh  start-issue.sh  test-scsv-files  work
src/: arrow_output.cpp  branchless_state_machine.cpp  cli.cpp  column_index.cpp  csv_parser.cpp  dialect.cpp  encoding.cpp  error.cpp  index_cache.cpp  io_util.cpp  io_util.h  libvroom_c.cpp  libvroom_types.cpp  main.cpp  mmap_util.cpp  simd_dispatch.cpp  simd_info.cpp  simdcsv_c.cpp  streaming.cpp  table.cpp  timing.h  two_pass.cpp  two_pass.h  utf8.cpp  value_extraction.cpp
src/columns/: column_builder.cpp  cow_buffer.h
src/encoding/: delta_bitpacked.cpp  delta_length.cpp  hybrid_rle.cpp  plain.cpp  rle.cpp
src/parser/: chunk_finder.cpp  line_parser.cpp  quote_parity-inl.h  quote_parity.cpp  simd_atoi-inl.h  simd_atoi.cpp  simd_chunk_finder.cpp  split_fields-inl.h  split_fields.cpp  split_fields_iter-inl.h  split_fields_iter.cpp
src/reader/: csv_reader.cpp  fwf_reader.cpp  mmap_source.cpp  streaming_parser.cpp
src/schema/: format_parser.cpp  type_inference.cpp  type_parsers.cpp
src/simd/: statistics_simd.cpp
src/writer/: arrow_ipc_writer.cpp  column_writer.cpp  compression.cpp  dictionary.cpp  encoded_row_group.h  encoded_row_group_queue.h  page_writer.cpp  parquet_file.cpp  parquet_types.cpp  parquet_types.h  row_group.cpp  statistics.cpp  thrift_compact.cpp  thrift_compact.h
test/: README.md  api_test.cpp  arrow_conversion_test.cpp  arrow_file_test.cpp  arrow_output_test.cpp  bounds_validation_test.cpp  branchless_test.cpp  buffer_lifetime_test.cpp  c_api_test.cpp  cli_test.cpp  column_config_test.cpp  column_escape_test.cpp  column_index_test.cpp  column_major_test.cpp  comment_line_test.cpp  concurrency_test.cpp  csv_errors_test.cpp  csv_extended_test.cpp  csv_parser_errors_test.cpp  csv_parser_test.cpp  csv_parsing_test.cpp  csv_reader_test.cpp  debug_test.cpp  dialect_detection_test.cpp  encoding_test.cpp  error_handling_test.cpp  format_parser_test.cpp  fwf_reader_test.cpp  index_cache_test.cpp  integration_test.cpp  io_util_test.cpp  lazy_column_test.cpp  mmap_util_test.cpp  parsed_chunk_queue_test.cpp  quote_mask_test.cpp  quote_parity_test.cpp  row_filter_test.cpp  simd_info_test.cpp  simd_number_parsing_test.cpp  simd_parsing_test.cpp  (+13 more)
(+71 files in other folders)
